Fix header on small screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,24 +23,18 @@ html, body{
 }
 
 /* Adapt to devices with smaller screens */
-@media (max-width: 816px){
+@media (max-width: 744px){
+    header li{
+        font-size: 20px !important;
+    }
     body{
         font-size: 1.3rem;
     }
-    header{
-        padding: 0px !important;
-    }
-    header li{
-        font-size: 1.8rem !important;
-        padding: 0px;
-        margin-bottom: 1rem;
-    }
     #about-me h1{
-        font-size: 1.5rem !important;
+        font-size: 3.1rem !important;
     }
 }
-/* Change img size */
-@media (max-width: 600px){
+@media (max-width: 601px){
     html, body{
         font-size: 1.1rem;
         line-height: 1.1;
@@ -56,6 +50,7 @@ html, body{
     } 
     #about-me h1{
         font-size: 2rem !important;
+        text-align: center;
     }
     .about-me-image{
         text-align: center;
@@ -71,12 +66,12 @@ html, body{
     }
 }
 
+/* Remove default settings */
 ul, li{
     border: 0;
     margin: 0;
     list-style-type: none;
 }
-
 a{
     text-decoration: none;
 }
